--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="" alt="Quick Yeast Rolls">
+     <img src="/assets/image.jpeg" alt="Quick Yeast Rolls"><br><br>
+      <p>This easy yeast roll recipe was given to me by my Great, Great Grandmother.
+     I used it a couple of years ago in our state fair and received first place.
+
+     </p>
+     <p>This a nice meal to prepare.It just takes a few minutes to prepare this simple meal 
+         . I recommend this simple recipe to anybody who wishes to prepare a yeast roll.
+     </p>
     
 </body>
 </html>
