--- a/chicken.html
+++ b/chicken.html
@@ -12,6 +12,41 @@
     <p>If there is one recipe inextricably linked to grandmothers,
          especially My grandmother, it has to be chicken soup. The staple all winter long,
           and anytime someone is feeling poorly, is one of those dishes everyone should know how to 
-          make. This recipe is grandmother tested and approved</p>    
+          make. This recipe is grandmother tested and approved</p>
+          <p>This soup my Grandmother used to make when we didn't feel well. 
+              I have doctored it up a bit.</p> 
+              <h1>Ingredients</h1> 
+              <ul>
+                  <li>1 (2 to 3 pound) whole chicken</li>
+                  <li>3 stalks celery with leaves, chopped</li>
+                  <li>1 pound baby carrots</li>
+                  <li>2 onions, chopped</li>
+                  <li>2 cubes beef bouillon, crumbled</li>
+                  <li>1 packet chicken noodle soup mix</li>
+                  <li>2 (14.5 ounce) cans low-sodium chicken broth</li>
+                  <li>2 (14.5 ounce) cans low-sodium chicken broth</li>
+                  <li>1 pinch poultry seasoning</li>
+                  <li>1 pinch dried basil</li>
+                  <li>5 black peppercorns</li>
+                  <li>2 bay leaves</li>
+                  <li>1 pinch dried parsley</li>
+                  <li>1 (8 ounce) package farfalle (bow tie) pasta</li>
+                  <h2>Steps</h2>
+                  <ol>
+                      <li>Step 1<br>
+                        Place chicken in a large pot and cover with water. Place celery leaves in pot and 
+                        bring to a boil, then reduce heat and simmer until chicken is cooked through, 30 to 40 minutes.
+                         Remove chicken from pot and place in a bowl until cool enough to handle.</li>
+                         <li>Step 2<br>
+                            Meanwhile, strain the cooking liquid, discard the celery tops and place the cooking liquid in a 
+                            large pot. Place celery, carrots, onion, bouillon, soup mix and chicken broth in the pot and let 
+                            simmer. Season with thyme, poultry seasoning, basil, peppercorns, bay leaves and parsley.</li>
+                            <li>Step 3<br>
+                                Bone chicken and cut up meat into bite-size pieces. Return meat to pot. 
+                                Cook until vegetables are tender and flavors are well blended, up to 90 minutes.</li>
+                                <li>Step 4<br>
+                                    Stir pasta into pot and cook 10 to 15 minutes more, until noodles are al dente. Serve hot.</li>
+                  </ol>
+              </ul>  
 </body>
 </html>
