--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>    
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Quick Yeast Rolls</a>
+    <ul>
+   <li><a href="lasagna.html">Quick Yeast Rolls</a></li>
+   <li><a href="chicken.html">Best Chicken Ever</a></li> 
+    </ul>
        
 </body>
 </html>
