addition of creamy.html

--- a/chicken.html
+++ b/chicken.html
@@ -46,7 +46,11 @@
                                 Cook until vegetables are tender and flavors are well blended, up to 90 minutes.</li>
                                 <li>Step 4<br>
                                     Stir pasta into pot and cook 10 to 15 minutes more, until noodles are al dente. Serve hot.</li>
+                        
                   </ol>
-              </ul>  
+              </ul>
+              <h3>Nutrional Facts</h3> 
+              <p>Per Serving: 487 calories; protein 34g; carbohydrates 35g; fat 23g;
+                 cholesterol 115mg; sodium 761mg.</p> 
 </body>
 </html>
