--- a/creamy.html
+++ b/creamy.html
@@ -10,7 +10,47 @@
     <h1>Creamy Chicken Florentine pasta</h1>
     <p>Creamy and comforting, this creamy chicken Florentine pasta is sure to be a hit at dinnertime.
          The toasty bread crumb topping delivers a bit of a crunch. 
-        You can easily feed more by increasing your pasta</p> 
-          
+        You can easily feed more by increasing your pasta</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups uncooked elbow macaroni</li>
+            <li>3 cups shredded cooked chicken</li>
+            <li>1 cup shredded Swiss cheese</li>
+            <li>1 cup shredded mozzarella cheese</li>
+            <li>½ cup mayonnaise</li>
+            <li>¼ cup minced fresh basil</li>
+            <li>1 small onion, diced</li>
+            <li>16 ounces baby spinach</li>
+            <li>1 (10.5 ounce) can condensed cream of mushroom soup</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>½ teaspoon dried thyme</li>
+            <li>½ teaspoon ground black pepper</li>
+            <li>½ cup seasoned bread crumbs</li>
+            <li>2 tablespoons butter, melted</li>
+                    </ul>
+                    <h2>Directions</h2>
+                    <ol>
+                        <li>Step 1<br>
+                            Preheat the oven to 350 degrees F (175 degrees C).</li>
+                            <li>Step 2<br>
+                                Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, 
+                                stirring occasionally, until tender yet firm to the bite, about 8 minutes.</li>
+                                <li>Step 3<br>
+                                    While the macaroni is cooking, combine chicken, Swiss and mozzarella cheeses, 
+                                    mayonnaise, basil, and onion in a bowl. Add spinach, condensed soup, garlic powder,
+                                     thyme, and pepper; mix to combine.</li>
+                                     <li>Step 4<br>
+                                        Drain macaroni. Gently stir into the chicken mixture. Transfer to an ungreased 9x13-inch
+                                         baking dish </li>
+                                         <li>Step 5<br>
+                                            Toss bread crumbs with melted butter; sprinkle over the casserole.</li>
+                                            <li>Step 6<br>
+                                                Bake, uncovered, in the preheated oven until bubbly, 40 to 45 minutes.</li>
+                                     
+                    </ol>
+                    <h3>Nutrion Facts</h3>
+                    <p>Per Serving: 481 calories; protein 28.4g; carbohydrates 32.1g; fat 26.6g; cholesterol 78mg;
+                         sodium 667.4mg. Full Nutrition</p>
+
 </body>
 </html>
