addition of creamy.html, index.html, chicken.html

--- a/creamy.html
+++ b/creamy.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Creamy Chicken Florentine pasta</h1>
+    <img src="/assets/image (3).jpeg" alt="Creamy Chicken Florentine Pasta">
     <p>Creamy and comforting, this creamy chicken Florentine pasta is sure to be a hit at dinnertime.
          The toasty bread crumb topping delivers a bit of a crunch. 
         You can easily feed more by increasing your pasta</p>
