--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
    <li><a href="lasagna.html">Quick Yeast Rolls</a></li>
-   <li><a href="chicken.html">Best Chicken Ever</a></li> 
+   <li><a href="chicken.html">Best Chicken Ever</a></li>
+   <li><a href="creamy.html">Creamy Chicken Florentine Pasta</a></li> 
     </ul>
       
 </body>
