--- a/lasagna.html
+++ b/lasagna.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <h1>Quick Yeast Rolls</h1>
-     <img src="/assets/image.jpeg" alt="Quick Yeast Rolls"><br><br>
+     <img src="/assets/image (1).jpeg" alt="Quick Yeast Rolls"><br><br>
       <p>This easy yeast roll recipe was given to me by my Great, Great Grandmother.
      I used it a couple of years ago in our state fair and received first place.
 
